force-app/main/default/objects/Ellisphere_API_account__mdt/Ellisphere_API_account__mdt.object-meta.xml
<CustomObject>
    <description>Information permettant l&apos;accès aux API</description>
    <label>Ellisphere API account</label>
    <pluralLabel>Ellisphere API accounts</pluralLabel>
</CustomObject>