force-app/main/default/objects/Ellisphere_API_account__mdt/fields/contractId__c.field-meta.xml
<CustomField>
    <fullName>contractId__c</fullName>
    <label>contractId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>