force-app/main/default/objects/Ellisphere_API_account__mdt/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>