force-app/main/default/objects/Ellisphere_API_account__mdt/fields/productId__c.field-meta.xml
<CustomField>
    <fullName>productId__c</fullName>
    <label>productId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>