force-app/main/default/objects/Ellisphere_API_account__mdt/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>